<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AuthorizationFragment">

    <data>
        <variable
            name="viewModel"
            type="org.mirgar.android.mgclient.ui.viewmodels.Authorization" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:isGone="@{!viewModel.isLoading()}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:inputType="textEmailAddress"
                android:hint="@string/username"
                android:required="true"
                app:error="@{viewModel.usernameError}"
                android:autofillHints="emailAddress,login"
                android:text="@={viewModel.username}" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:required="true"
                app:error="@{viewModel.passwordError}"
                android:importantForAutofill="no"
                android:text="@={viewModel.password}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:text="@string/login"
                android:onClick="@{() -> viewModel.login()}"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>